--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ numpy>=1.19.2
 imlib>=0.0.27
 opencv-python>=4.4.0.44
 imutils>=0.5.3
-pyyaml
-playsound
+pyyaml~=6.0
+playsound~=1.3.0
+
+Pillow~=9.4.0
